tests/ui/const-generics/mgca/type_const-only-in-impl.stderr
error: use of trait associated const not defined as `type const`
  --> $DIR/type_const-only-in-impl.rs:14:43
   |
LL | fn accept_bad_tr<const N: usize, T: BadTr<NUM = { N }>>(_x: &T) {}
   |                                           ^^^^^^^^^^^
   |
   = note: the declaration in the trait must begin with `type const` not just `const` alone

error: aborting due to 1 previous error

